--- a/FlashFrancais/MainWindow.xaml
+++ b/FlashFrancais/MainWindow.xaml
@@ -6,7 +6,15 @@
         xmlns:local="clr-namespace:FlashFrancais"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <local:FlashDeckViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="10*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Margin="10" TextAlignment="Center" Grid.Row="0" Text="My FlashDeck App"/>
+        <local:FlashDeckControl Grid.Row="1"/>
     </Grid>
 </Window>
