--- a/FlashFrancais/FlashDeckControl.xaml
+++ b/FlashFrancais/FlashDeckControl.xaml
@@ -7,6 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
+    <UserControl.Resources>
+        <local:ParametrizedBooleanToVisibilityConverter x:Key="ParametrizedBooleanToVisibilityConverter"/>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -23,8 +26,9 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Command="{Binding FlipCurrentCardCommand}" Content="Flip" FontSize="36" RenderTransformOrigin="1.75,-1.787" Margin="10,0,10,10"/>
-            <Button Grid.Column="1" Command="{Binding GetNextCardCommand}" Content="Next" FontSize="36" Margin="10,0,10,10"/>
+            <Button Grid.Column="0" Command="{Binding FlipCurrentCardCommand}" Content="montre la réponse" FontSize="36" RenderTransformOrigin="1.75,-1.787" Margin="210,0,210,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=true}" Grid.ColumnSpan="2"/>
+            <Button Command="{Binding GetNextCardCommand}" Content="la prochaine fois" FontSize="36" Margin="10,0,10,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=false}"/>
+            <Button Command="{Binding GetNextCardCommand}" Content="la victoire" FontSize="36" Margin="10,0,10,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=false}" Grid.Column="1"/>
         </Grid>
     </Grid>
 </UserControl>
