--- a/FlashFrancais/FlashDeckControl.xaml
+++ b/FlashFrancais/FlashDeckControl.xaml
@@ -11,15 +11,18 @@
         <local:ParametrizedBooleanToVisibilityConverter x:Key="ParametrizedBooleanToVisibilityConverter"/>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid> <!-- Redo this jank -->
         <Grid.RowDefinitions>
             <RowDefinition Height="35*"/>
             <RowDefinition Height="308*"/>
             <RowDefinition Height="38*"/>
             <RowDefinition Height="69*"/>
         </Grid.RowDefinitions>
-        <Label HorizontalAlignment="Center" Foreground="Green" Grid.Row="0" Content="Current Card" Margin="361,0,361,308.036" Grid.RowSpan="2"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Text="{Binding CurrentCardText, UpdateSourceTrigger=PropertyChanged}" FontSize="36"/>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0" FontSize="20" Margin="361,0,361,308.036" Grid.RowSpan="2">
+            <Run Text="Successes: "/>
+            <Run Text="{Binding CardSuccesses, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"/>
+        </TextBlock>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Text="{Binding CurrentCardText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" FontSize="36"/>
 
         <Grid Grid.Row="1" Margin="0,275.333,0,0" Grid.RowSpan="3">
             <Grid.ColumnDefinitions>
@@ -27,8 +30,8 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Button Grid.Column="0" Command="{Binding FlipCurrentCardCommand}" Content="montre la réponse" FontSize="36" RenderTransformOrigin="1.75,-1.787" Margin="210,0,210,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=true}" Grid.ColumnSpan="2"/>
-            <Button Command="{Binding GetNextCardCommand}" Content="la prochaine fois" FontSize="36" Margin="10,0,10,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=false}"/>
-            <Button Command="{Binding GetNextCardCommand}" Content="la victoire" FontSize="36" Margin="10,0,10,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=false}" Grid.Column="1"/>
+            <Button Command="{Binding GetNextCardFailureCommand}" Content="la prochaine fois" FontSize="36" Margin="10,0,10,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=false}"/>
+            <Button Command="{Binding GetNextCardSuccessCommand}" Content="victoire" FontSize="36" Margin="10,0,10,10" Visibility="{Binding ShowingFront, Converter={StaticResource ParametrizedBooleanToVisibilityConverter}, ConverterParameter=false}" Grid.Column="1"/>
         </Grid>
     </Grid>
 </UserControl>
