--- a/FlashFrancais/App.xaml
+++ b/FlashFrancais/App.xaml
@@ -1,9 +1,12 @@
-﻿<Application x:Class="FlashFrancais.App"
+﻿<Application x:Class="FlashSearch.Viewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FlashFrancais"
+             xmlns:vm="clr-namespace:FlashFrancais.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <vm:ViewModelLocator x:Key="vmLocator" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
