--- a/FlashFrancais/App.xaml
+++ b/FlashFrancais/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FlashFrancais"
-             xmlns:vm="clr-namespace:FlashFrancais.ViewModel"
+             xmlns:vm="clr-namespace:FlashFrancais.ViewModels"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
