--- a/FlashFrancais/App.xaml
+++ b/FlashFrancais/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FlashFrancais"
              xmlns:vm="clr-namespace:FlashFrancais.ViewModels"
-             StartupUri="MainWindow.xaml">
+             StartupUri="./Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <vm:ViewModelLocator x:Key="vmLocator" />
