--- a/FlashFrancais/Views/MainWindow.xaml
+++ b/FlashFrancais/Views/MainWindow.xaml
@@ -7,12 +7,14 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
         DataContext="{Binding Source={StaticResource vmLocator}, Path=FlashDeckViewModel}">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="10*"/>
-        </Grid.RowDefinitions>
-        <TextBlock Margin="10" TextAlignment="Center" Grid.Row="0" Text="My FlashDeck App"/>
-        <local:FlashDeckControl Grid.Row="1"/>
-    </Grid>
+    <StackPanel>
+        <TabControl Name="mainTabs">
+            <TabItem Header="Practice">
+                <local:FlashDeckControl/>
+            </TabItem>
+            <TabItem Header="Create Cards">
+                <local:CreateCardsControl/>
+            </TabItem>
+        </TabControl>
+    </StackPanel>
 </Window>
