--- a/FlashFrancais/Views/FlashDeckControl.xaml
+++ b/FlashFrancais/Views/FlashDeckControl.xaml
@@ -21,6 +21,7 @@
             <Run Text="Successes: "/>
             <Run Text="{Binding CardSuccesses, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"/>
         </TextBlock>
+        <Button Command="{Binding CreateReverseCommand}" HorizontalAlignment="Right" Content="créer l'inverse" FontSize="24"/>
         <ScrollViewer Grid.Row="1" Height="400">
             <TextBlock TextWrapping="Wrap" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Text="{Binding CurrentCardText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" FontSize="30"/>
         </ScrollViewer>
